fix(input): visible border in iOS
Safari on iOS doesn't draw box-shadow with inset
option unless element has appearance set to none.

--- a/src/components/base/form/form_input/form_input.scss
+++ b/src/components/base/form/form_input/form_input.scss
@@ -11,6 +11,7 @@
   @include gl-inset-border-1-gray-400;
   @include gl-border-none;
   @include form-control-focus;
+  @include gl-appearance-none;
 
   &:disabled {
     @include gl-bg-gray-0;
